feat: git oauth를 jwt로 관리하도록 수정